(fix): total view overlapping - engine#959

--- a/src/app/modules/analytics/v2/components/table/table.component.scss
+++ b/src/app/modules/analytics/v2/components/table/table.component.scss
@@ -75,7 +75,7 @@
     .col--entity {
       flex-direction: column;
       padding-left: 24px;
-      flex-basis: 20vw;
+      // flex-basis: 20vw;
 
       .usernameWrapper a {
         font-weight: 400;
